--- a/to-ahiru/githubs/git.css
+++ b/to-ahiru/githubs/git.css
@@ -26,6 +26,10 @@ table{
 }
 .sample{
     background-color: aliceblue;
-    
+    background-size:auto;
 }
-
+table{
+    font-size: 40px;
+}
+.honnbunn{
+    font-size: 40px;
